Integrate new released code